# goodlogs

./: .gitignore  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: cd.yml  ci.yml  docs-deploy.yml  publish.yml  release.yml
docs/: conf.py
src/goodlog/: __init__.py  configuration.py  extra_info.py  filters.py  formats.py
tests/: test_json_formatter.py  test_logger_comprehensive.py
