[build-system]
requires = ["setuptools>=70.0.0","wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
disallow_untyped_defs = true
exclude = ["build/", "\\.venv/", "venv/", "setup.py"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W"]
[pycodestyle]
max-line-length = 80