[metadata]
name = goodlog
version = 0.0.1-rc.2
description = Do natural python logging in a natural manner
license_file = LICENSE
author = Ben Ronen
keywords = log logs logger logging utilities utils

[options]
python_requires = >=3.10, <4

package_dir =
    = src
packages = find:

include_package_data = True

[options.packages.find]
where = src
